force-app/main/default/objects/tspa__Observer_Details__c/fields/tspa__IsClosed__c.field-meta.xml
<CustomField>
    <fullName>tspa__IsClosed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsClosed</label>
    <type>Checkbox</type>
</CustomField>