force-app/main/default/objects/tspa__Observer_Details__c/fields/tspa__Observer_link__c.field-meta.xml
<CustomField>
    <fullName>tspa__Observer_link__c</fullName>
    <label>Observer link</label>
    <type>Url</type>
</CustomField>