force-app/main/default/objects/tspa__Observer_Details__c/fields/tspa__Session_Invite__c.field-meta.xml
<CustomField>
    <fullName>tspa__Session_Invite__c</fullName>
    <label>Session Invite</label>
    <referenceTo>tspa__TechSeeSessions__c</referenceTo>
    <relationshipName>Observer_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>